Sidebar-Initial design

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "js-fnstif",
-  "version": "0.0.0",
+  "name": "Personal Portfolio",
+  "version": "1.0.0",
+  "description": "SrinivasanKK developer portfolio website",
   "private": true,
   "dependencies": {}
 }
